<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/action_feed"
        android:title="@string/action_feed"
        android:icon="@drawable/ic_star"/>
    <item
        android:id="@+id/action_date"
        android:title="@string/action_date"
        android:icon="@drawable/ic_heart_gray"/>
    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_chat"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"/>
</menu>